# test-pkg-2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sg-package/: example.py  test-pkg.py
