[project]
name = "sg-package"
version = "0.0.1"
authors = [
  { name="phenomsg", email="phenomsg9@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/PhenomSG/test-pkg-2"
Issues = "https://github.com/PhenomSG/test-pkg-2/issues"
